update route for by user group article
