# app/controllers/articles_controller.rb
@@ -1,5 +1,6 @@
 class ArticlesController < ApplicationController
     before_action :set_article, only: [:show, :update, :destroy]
+    before_action :set_user_group, only: [:by_user_group]
   
     # GET /articles
     def index
@@ -10,6 +11,12 @@ class ArticlesController < ApplicationController
     # GET /articles/1
     def show
       render json: @article
+    end
+    
+    # GET /articles/ by user groups CREATE THIS ROUTE - user groups
+    def by_user_group
+      @articles = Article.where("user_group like ?", @user_group)
+      render json: @articles
     end
   
     # POST /articles
@@ -43,6 +50,10 @@ class ArticlesController < ApplicationController
     
     def article_params
         params.require(:article).permit(:published_date, :created_date, :title, :author, :img_url, :url, user_group: [])
+    end
+
+    def set_user_group
+      @user_group = "%#{params[:user_group]}%"
     end
       
   end
